pkg/kube/gateway/gateway/testdata/basic.golden.yaml
listeners:
    kgw--listener-http-80:
        port: 80
backends:
    kgw--httproute.shop.web_r0:
        provider: rp
        origin_url: http://web-svc.shop.svc:8080
        hosts:
            - shop.example.com
        listener_names:
            - kgw--listener-http-80
        cache_key_prefix: httproute.shop.web
        path_routing_disabled: true
        path_defaults_disabled: true
        preserve_host: true
        paths:
            - path: /api
              match_type: segment
              handler: proxy
              methods:
                - '*'
